2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt/cipher/idea.c (mul_inv): Remove signed
	divisions.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt/mpi/mpih-div.c (_gcry_mpih_divrem):
	Use grub_fatal rather than divide by zero.
	* grub-core/lib/libgcrypt/mpi/mpi-pow.c (gcry_mpi_powm): Likewise.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/gui.h (grub_fixed_sfs_divide): Round rather than
	truncate.
	(grub_fixed_fsf_divide): Likewise.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_list.c (draw_scrollbar): Avoid
	division by-zero and senseless negative divisions.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_circular_progress.c (circprog_paint): Avoid
	division by-zero and senseless negative divisions.
	(circprog_set_property): Don't accept negative num_ticks.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_progress_bar.c (draw_pixmap_bar): Avoid
	division by-zero and senseless negative divisions.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Use elf_*_fbsd on kfreebsd.

2013-11-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/div_test.c: New test.

2013-11-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_box.c: Updated to work with area status.
	* grub-core/gfxmenu/gui_canvas.c: Likewise.
	* grub-core/gfxmenu/view.c: Likewise.
	* grub-core/video/fb/video_fb.c: Introduce new functions:
	grub_video_set_area_status, grub_video_get_area_status,
	grub_video_set_region, grub_video_get_region.
	* grub-core/video/bochs.c: Likewise.
	* grub-core/video/capture.c: Likewise.
	* grub-core/video/video.c: Likewise.
	* grub-core/video/cirrus.c: Likewise.
	* grub-core/video/efi_gop.c: Likewise.
	* grub-core/video/efi_uga.c: Likewise.
	* grub-core/video/emu/sdl.c: Likewise.
	* grub-core/video/radeon_fuloong2e.c: Likewise.