@@ -68,6 +68,7 @@ struct grub_serial_config
   grub_serial_parity_t parity;
   grub_serial_stop_bits_t stop_bits;
   grub_uint64_t base_clock;
+  int rtscts;
 };
 
 struct grub_serial_port
@@ -159,8 +160,11 @@ grub_serial_config_defaults (struct grub_serial_port *port)
     {
 #ifdef GRUB_MACHINE_MIPS_LOONGSON
       .speed = 115200,
+      /* On Loongson machines serial port has only 3 wires.  */
+      .rtscts = 0,
 #else
       .speed = 9600,
+      .rtscts = 1,
 #endif
       .word_len = 8,
       .parity = GRUB_SERIAL_PARITY_NONE,
